<resources>
    <string name="app_name">BAHAnda</string>
    <string name="catchphrase">Maging Handa sa Pagbaha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="api">AIzaSyC1GhmhXUO60BU5JvnsBMYxyQTjSSAdnlQ</string>

    <!-- Drawer -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Flood</string>
    <string name="first_aid">First Aid</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="maps">Maps</string>
    <string name="hotlines">Hotlines</string>
    <!--Safety Tips Strings-->
    <string name="SafetyTip_1">Ensure someone always knows where you are</string>
    <string name="SafetyTip_2">Keep up with the news.</string>
    <string name="SafetyTip_3">Unplug all unnecessary electrical outlets and appliances</string>
    <string name="SafetyTip_4">Know how to shut down your electricity</string>
    <string name="SafetyTip_5">Pack a backpack</string>
    <string name="SafetyTip_6">Keep Calm and Prepare some floating devices.</string>
    <string name="SafetyTip_7">Avoid running water and any flood water if you have to walk out of your home.</string>
    <string name="SafetyTip_1_1">Text your parents, your loved ones or friends to let them know where you are and who you are with. Update each other consistently.</string>
    <string name="SafetyTip_2_1">Tune in to the news on TV, radio or online. Twitter is one of the best ways to get up to date and instant info. Stay informed.</string>
    <string name="SafetyTip_3_1">Avoid damage to your electronics by putting electronics on higher grounds to possibly save them.</string>
    <string name="SafetyTip_4_1">Familiarize yourself with your circuit breaker so you can shut it down immediately if the water starts to enter your home.</string>
    <string name="SafetyTip_5_1">Get all your emergency items like your ID, Passport, money, phone, water and other small necessary items. Be ready to evacuate or leave in a worst case scenario.</string>
    <string name="SafetyTip_6_1">Find a surfboard, life savers or anything that will float… just in case</string>
    <string name="SafetyTip_7_1">For standing water, try to do so only while wearing boots high enough to protect you from the water.</string>
    <!--Hotlines Strings-->
    <string name="hotline">Hotline: </string>
    <string name="trunkline">Trunkline/s: </string>
    <string name="opscenter">Operations Center: </string>
    <string name="disasterunit">Disaster Response Unit: </string>
    <string name="disastermngt">Disaster Management Office: </string>
    <string name="directline">Direct Line: </string>
    <string name="actioncenter">Action Center: </string>
    <string name="national">National Emergency Hotline</string>
    <string name="nationalNum">911</string>
    <string name="ndrrmc">National Disaster And Risk Reduction And Management Council (NDRRMC)</string>
    <string name="ndrrmcNum">911-5061 to 65</string>
    <string name="ndrrmcOPS1">(02)911-1406</string>
    <string name="ndrrmcOPS2">(02)912-2665</string>
    <string name="ndrrmcOPS3">(02)912-5668</string>
    <string name="ndrrmcOPS4">(02) 911-1873</string>
    <string name="redcross">Red Cross</string>
    <string name="redcrossNum1">143</string>
    <string name="redcrossNum2">(02) 527-0000</string>
    <string name="redcrossNum3">(02) 527-8385 to 95</string>
    <string name="redcrossdismngtNum1">134 (Staff)</string>
    <string name="redcrossdismngtNum2">132 (Manager)</string>
    <string name="redcrossdismngtNum3">133 (Radio Room)</string>
    <string name="pnp">Philippine National Police (PNP)</string>
    <string name="pnpNum1">117</string>
    <string name="pnpNum2">722-0650</string>
    <string name="bfp">Bureau of Fire Protection (NCR)</string>
    <string name="bfpNum1">(02) 426-0219</string>
    <string name="bfpNum2">(02) 426-3812</string>
    <string name="bfpNum3">(02) 426-0246</string>
    <string name="pcg">Philippine Coast Guard</string>
    <string name="pcgNum">(02) 527-8481 to 89</string>
    <string name="pcgactionNum">(02) 527-3877</string>
    <string name="mmda">Metro Manila Development Authority</string>
    <string name="mmdahotline">136</string>
    <string name="mmdalocal">loc.</string>
    <string name="localNum1">337 (rescue)</string>
    <string name="localNum2">255 (Metrobase)</string>
    <string name="localNum3">319 (Road Safety)</string>
    <string name="localNum4">374 (Public Safety)</string>
    <string name="localNum5">320 (Road Emergency)</string>
    <string name="localNum6">(02) 882-0925 (Flood Control)</string>
    <string name="flood_definition">
        <![CDATA[
            - the process of inundation or the coverage by water of areas not normally submerged.
            Inundation is due to water overflowing from streams and other bodies of water
            as well as by the accumulation of rainwater by drainage.
        ]]>
    </string>
    <string name="first_aid_steps_title">FIRST AID STEPS</string>
    <string name="first_aid_steps">1. Before administering care to an ill or injured person, check the scene and the person. Size up the scene and form an initial impression.</string>
    <string name="firstAid1_1">- Pause and looks at the scene and the person before responding</string>
    <string name="firstAid2">2. If the Person is awake and Responsive and there is no severe life-threatening bleeding:</string>
    <string name="firstAid2_1">- Obtain consent: Tell the person your name, describes type and level of training, states what you thinks is wrong and what you plans to do, and asks permission to provide care.</string>
    <string name="firstAid3">3. If the Person Appears Unresponsive:</string>
    <string name="firstAid3_1">- Shout to get the person’s attention, using the person’s name if it is known. If there is no response, tap the person’s shoulder (if the person is an adult or child) or the bottom of the person’s foot (if the person is an infant) and shout again, while checking for normal breathing. Check for Responsiveness and breathing for no more than 5-10 seconds.</string>
    <string name="firstAid4">4. If the person is breathing:</string>
    <string name="firstAid4_1">- Send someone to call 911 or the designated emergency number and obtain an AED and first aid kit.</string>
    <string name="firstAid5">5. If the person is NOT breathing:</string>
    <string name="firstAid5_1">- Begin CPR (starting with compressions) or use an AED if one is immediately available.</string>
    <string name="title_activity_safetytips_activity">Safety Tips</string>
    <string name="title_activity_firstaid_activity">First Aid</string>
    <string name="title_activity_map_activity">Map</string>
    <string name="video">Video</string>
    <string name="title_what_to_do">What to do when flood strikes</string>
    <string name="image_source">https://www.rappler.com/nation/207501-flooded-areas-metro-manila-july-17-2018</string>
    <string name="title_safety_tips">SAFETY TIPS</string>
    <string name="title_flood">FLOOD</string>
    <string name="see_more">See More</string>

    //Map
    <string name="myLocation">My Location</string>
    <string name="diffLocation">Different Location</string>
    <string name="hint1">From</string>
    <string name="hint2">To</string>
    <string-array name="establishments">
        <item>Choose Establishment</item>
        <item>Hospitals</item>
        <item>Police Stations</item>
        <item>Fire Departments</item>
        <item>Evacuation Centers</item>
        <item>MetroAntipolo</item>
    </string-array>
    <string name="search">Search Google Maps</string>



</resources>
