<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cornell.diaz.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/first_aid_steps_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextView_1"
                    android:text="@string/first_aid_steps" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/TextView_2"
                    android:text="@string/firstAid1_1" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextView_1"
                    android:text="@string/firstAid2" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextView_2"
                    android:text="@string/firstAid2_1" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextView_1"
                    android:text="@string/firstAid3" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/TextView_2"
                    android:text="@string/firstAid3_1" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextView_1"
                    android:text="@string/firstAid4" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/TextView_2"
                    android:text="@string/firstAid4_1" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/TextView_1"
                    android:text="@string/firstAid5" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/TextView_2"
                    android:text="@string/firstAid5_1" />

                <fragment
                    android:id="@+id/fragmentyoutubeplayer"
                    class="com.google.android.youtube.player.YouTubePlayerFragment"
                    android:layout_width="match_parent"
                    android:layout_height="165dp" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>